Add page for camera 50/50

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body style="font-family: sans-serif; margin-left: 7%; margin-right: 7%">
 		<h1>Grimnir Combos</h1>
 		<a href="https://grimnir-combos.github.io/corner-fuzzy.html">Corner Fuzzies</a>
+		<a href="https://grimnir-combos.github.io/camera-5050.html">Camera 50/50</a>
 		<p>Grimnir is a character with a lot of tech, setups, and cool stuff you can do. You don't need to learn all of it. You especially don't need to learn all of it at once. Start somewhere, then as you get more comfortable, gradually add more.</p>
 		<p>Granblue combo basics: Granblue's "combo limit" system only kicks in after the opponent is launched, so as long as the opponent is grounded you can do as many hits as you can fit in without it affecting the launcher portion of the combo. As a result you'll usually see combos start with (starter) because, well, it actually doesn't matter. Some common (starter)s:</p>
 		<ul>
