Add page for tornado setups

--- a/corner-fuzzy.html
+++ b/corner-fuzzy.html
@@ -9,7 +9,7 @@
 	<body style="font-family: sans-serif; margin-left: 7%; margin-right: 7%">
 		<a href="https://grimnir-combos.github.io/index.html">Grimnir Combos</a>
 		<h1>Corner Fuzzy Setups</h1>
-		<h2>Your first combo</h2>
+		<h2>Your First Combo</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > 5HHH > 22H</code><br/>
 		<video controls preload="none"width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/basic-corner.mp4"/>
