Add page for super combos

--- a/camera-5050.html
+++ b/camera-5050.html
@@ -6,12 +6,12 @@
 		<title>Grimnir Combos</title>
 		<link rel="stylesheet" href="./style.css" />
 	</head>
-	<body style="font-family: sans-serif; margin-left: 7%; margin-right: 7%">
+	<body>
 		<a href="https://grimnir-combos.github.io/index.html">Grimnir Combos</a>
 		<h1>Camera 50/50</h1>
 		<h2>Camera High</h2>
-		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> j.26U whiff > j.L)</code><br/>
-		<video controls preload="none"width="60%">
+		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> j.26U whiff > j.L)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-high"/>
 		</video>
 		<p>Evil 50/50 setup that abuses the game's camera for a barely-reactable high/low. When I say barely-reactable I mean it. Like, I'm definitely not reacting. Looks harder than it is: though it looks like there's a big delay between the 99 and the 2X airdashes, it's actually all one button - just hold U the whole time.</p>
@@ -19,19 +19,19 @@
 		<p>One more thing: this setup is also a bit better against parry characters than the fuzzy setups. With the fuzzy, if you do an empty jump to bait parry, your opponent can fuzzy mash to take back their turn. If you end this camera setup on j.21U whiff, you can bait a parry while standing at a distance safe enough to generally keep pressure.</p>
 		<h2>Camera Low</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> j.23U whiff > 2L)</code><br/>
-		<video controls preload="none"width="60%">
+		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-low.mp4"/>
 		</video>
 		<p>Pretty much the same as the previous combo, but your last dash is down-forward instead of forward. You can skip the 3U at the end to conserve a seal, but a suitably prepared opponent can react to the audio cue of you only dashing once.</p>
 		<h2>Camera Fuzzy</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> j.6U whiff > j.H fuzzy)</code><br/>
-		<video controls preload="none"width="60%">
+		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-fuzzy.mp4"/>
 		</video>
 		<p>Extremely reactable high, but if your opponent's mind is focused on the camera mix they may forget to brave counter the fuzzy.</p>
 		<h2>Hard Camera Fuzzy</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> delay j.6U whiff > j.M fuzzy)</code><br/>
-		<video controls preload="none"width="60%">
+		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-fuzzy-hard.mp4"/>
 		</video>
 		<p>The j.6U whiff is a very difficult manual timing. It's also pretty difficult to hit-confirm if the j.M hits.</p>
