--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 		<title>Grimnir Combos</title>
 		<link rel="stylesheet" href="./style.css" />
 	</head>
-	<body style="font-family: sans-serif; margin-left: 7%; margin-right: 7%">
+	<body>
 		<h1>Grimnir Combos</h1>
-		<a href="https://grimnir-combos.github.io/corner-fuzzy.html">Corner Fuzzies</a>
-		<a href="https://grimnir-combos.github.io/camera-5050.html">Camera 50/50</a>
-		<a href="https://grimnir-combos.github.io/tornado-setups.html">Tornado Setups</a>
-		<a href="https://grimnir-combos.github.io/midscreen.html">Midscreen Setups</a>
-		<a href="https://grimnir-combos.github.io/u-skill-starters.html">U Skill Starters</a>
-		<a href="https://grimnir-combos.github.io/super-combos.html">Super and Cashout Combos</a>
+		<a href="https://grimnir-combos.github.io/corner-fuzzy.html">Corner Fuzzies</a><br/>
+		<a href="https://grimnir-combos.github.io/camera-5050.html">Camera 50/50</a><br/>
+		<a href="https://grimnir-combos.github.io/tornado-setups.html">Tornado Setups</a><br/>
+		<a href="https://grimnir-combos.github.io/midscreen.html">Midscreen Setups</a><br/>
+		<a href="https://grimnir-combos.github.io/u-skill-starters.html">U Skill Starters</a><br/>
+		<a href="https://grimnir-combos.github.io/super-combos.html">Super and Cashout Combos</a><br/>
 		<p>Grimnir is a character with a lot of tech, setups, and cool stuff you can do. You don't need to learn all of it. You especially don't need to learn all of it at once. Start somewhere, then as you get more comfortable, gradually add more.</p>
 		<p>Granblue combo basics: Granblue's "combo limit" system only kicks in after the opponent is launched, so as long as the opponent is grounded you can do as many hits as you can fit in without it affecting the launcher portion of the combo. As a result you'll usually see combos start with (starter) because, well, it actually doesn't matter. Some common (starter)s:</p>
 		<ul>
@@ -40,12 +40,12 @@
 		<p>You'll also see "rejump" in some combos. This means to land, jump again, and do the input. Another thing most characters in this game don't get to do, but you're playing a cool character so you get to do the cool stuff.</p>
 		<p>You'll also also see "whiff" in some combos. Yes, this means you're supposed to miss the attack.</p>
 		<p>What is the fuzzy? Without getting into the inner workings, it's hitting a falling jump attack, and then hitting a second jump attack while rising for a sort of "double overhead." You can either do the double overhead, or you can go low, so the opponent has to either guess 50/50 or brave counter. The most common fuzzy is falling j.H > rising j.M > j.3U seal dash. It looks like this:</p>
-		<video controls width="60%">
+		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/raw-fuzzy.mp4"/>
 		</video>
 		<p>If you hit the j.H low enough the execution for the fuzzy is actually pretty easy. The troublesome part is that the timing is actually pretty strict. A lot of Grimnir's combo routing revolves around making this setup "autotimed" - i.e. if you hit the falling j.H on your opponent's wakeup you will have enough blockstun for rising j.M. Here is the easiest fuzzy setup in the game, and the one you should learn first:
 throw > j.H fuzzy</p>
-		<video controls width="60%">
+		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/throw-fuzzy.mkv"/>
 		</video>
 	</body>
