Add page for midscreen combos

--- a/super-combos.html
+++ b/super-combos.html
@@ -10,25 +10,25 @@
 		<a href="https://grimnir-combos.github.io/index.html">Grimnir Combos</a>
 		<h1>Super and Cashout Combos</h1>
 		<h2>Super Combo</h2>
-		<code>(starter) > raging strike > 5H > 623H > 5H > 236H~8 > 5H > 214H > super</code><br/>
+		<code>(starter) > raging strike > 5H > 623H > 5H > 236H~8 > 5H > 214H > super</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/super-combo.mp4"/>
 		</video>
 		<p>This is the combo you do when you want to kill (or get really close). You might also go for it when you already have seals set up. If you have technical inputs turned on, make sure to technical input the super for your extra 10%. If you're too far after the raging strike, you'll get far H instead of close H. This still works, but you need to make sure to wait for both hits of f.H or you'll drop. If you're having trouble keeping the height for super, you can replace the 5H before tornado with 2M to make the combo much easier.</p>
 		<h2>Tornado In Front (j.22U)</h2>
-		<code>autocombo > 236H > 5HHH (crouch) or 5MMM (standing) > raging strike > 5HH > 623H > 5H > 214H > super</code><br/>
+		<code>autocombo > 236H > 5HHH (crouch) or 5MMM (standing) > raging strike > 5HH > 623H > 5H > 214H > super</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/super-grounded-tornado"/>
 		</video>
 		<p>Slightly stronger super combo if you're close enough to combo out of grounded tornado. Replace the last 5H with 5M if going into SSBA (which is slightly slower).</p>
 		<h2>Super Seal Setup</h2>
-		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22H > j.3U > 5H > super</code><br/>
+		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22H > j.3U > 5H > super</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/super-combo-seals"/>
 		</video>
 		<p>If you know your super won't kill, you might opt to set up seals instead. You can fuzzy off this with short walk > j.6U > j.M fuzzy. The timing on making it a safejump is pretty tough, but the timing on hitting it in general is pretty lenient. Note that unlike the j.H fuzzy, the j.M fuzzy can be rolled out of. You *can* do the j.H fuzzy off the safejump (you can do it off any jump), but it's manually timed (much harder).</p>
 		<h2>Midscreen Cashout</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > 2H > delay raging strike > 214U > 22U > 5M > raging strike > raging chain</code><br/>
+		<code>autocombo or 2M > 236H~8 > 214U > 2H > delay raging strike > 214U > 22U > 5M > raging strike > raging chain</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-big-dick-cashout"/>
 		</video>
