--- a/camera-5050.html
+++ b/camera-5050.html
@@ -12,25 +12,25 @@
 		<h2>Camera High</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> j.26U whiff > j.L)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-high"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-high.mp4"/>
 		</video>
 		<p>Evil 50/50 setup that abuses the game's camera for a barely-reactable high/low. When I say barely-reactable I mean it. Like, I'm definitely not reacting. Looks harder than it is: though it looks like there's a big delay between the 99 and the 2X airdashes, it's actually all one button - just hold U the whole time.</p>
 		<p>Some advantages over fuzzy setups: can't be brave countered, if it's blocked it's still 100% unambiguously your turn, and it tends to do a little bit more damage. Some disadvantages: it's theoretically reactable, and it uses up all of your seals. Also, while the high is a safejump, the low (shown in the next combo) loses to DP.</p>
 		<p>One more thing: this setup is also a bit better against parry characters than the fuzzy setups. With the fuzzy, if you do an empty jump to bait parry, your opponent can fuzzy mash to take back their turn. If you end this camera setup on j.21U whiff, you can bait a parry while standing at a distance safe enough to generally keep pressure.</p>
 		<h2>Camera Low</h2>
-		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> j.23U whiff > 2L)</code><br/>
+		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> j.23U whiff > 2L)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-low.mp4"/>
 		</video>
 		<p>Pretty much the same as the previous combo, but your last dash is down-forward instead of forward. You can skip the 3U at the end to conserve a seal, but a suitably prepared opponent can react to the audio cue of you only dashing once.</p>
 		<h2>Camera Fuzzy</h2>
-		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> j.6U whiff > j.H fuzzy)</code><br/>
+		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> j.6U whiff > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-fuzzy.mp4"/>
 		</video>
 		<p>Extremely reactable high, but if your opponent's mind is focused on the camera mix they may forget to brave counter the fuzzy.</p>
 		<h2>Hard Camera Fuzzy</h2>
-		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> delay j.6U whiff > j.M fuzzy)</code><br/>
+		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> delay j.6U whiff > j.M fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-fuzzy-hard.mp4"/>
 		</video>
