--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<a href="https://grimnir-combos.github.io/midscreen.html">Midscreen Setups</a><br/>
 		<a href="https://grimnir-combos.github.io/u-skill-starters.html">U Skill Starters</a><br/>
 		<a href="https://grimnir-combos.github.io/super-combos.html">Super and Cashout Combos</a><br/>
-		<p>Grimnir is a character with a lot of tech, setups, and cool stuff you can do. You don't need to learn all of it. You especially don't need to learn all of it at once. Start somewhere, then as you get more comfortable, gradually add more.</p>
+		<p>Grimnir tech resource. Links to combos/setups above. Below is an overview of the game's combo system and a brief introduction to Grimnir's fuzzy setups.</p>
 		<p>Granblue combo basics: Granblue's "combo limit" system only kicks in after the opponent is launched, so as long as the opponent is grounded you can do as many hits as you can fit in without it affecting the launcher portion of the combo. As a result you'll usually see combos start with (starter) because, well, it actually doesn't matter. Some common (starter)s:</p>
 		<ul>
 			<li>autocombo</li>
@@ -38,15 +38,14 @@
 		<p>What do the numbers mean? It's called "numpad notation" and they represent directions. 2 is down, 6 is forward, 4 is backward. Grimnir's combo notation is extra fun because you get to use stuff like 7 and 9 for some combos. Most characters don't get to do that. Grimnir privilege.</p>
 		<p>For tornado specifically you'll see "236H~X". This is to denote the tornado followup. 236H~8 is up tornado. 236H~4 is stop tornado.</p>
 		<p>You'll also see "rejump" in some combos. This means to land, jump again, and do the input. Another thing most characters in this game don't get to do, but you're playing a cool character so you get to do the cool stuff.</p>
-		<p>You'll also also see "whiff" in some combos. Yes, this means you're supposed to miss the attack.</p>
-		<p>What is the fuzzy? Without getting into the inner workings, it's hitting a falling jump attack, and then hitting a second jump attack while rising for a sort of "double overhead." You can either do the double overhead, or you can go low, so the opponent has to either guess 50/50 or brave counter. The most common fuzzy is falling j.H > rising j.M > j.3U seal dash. It looks like this:</p>
+		<p>What is the fuzzy? Without getting into the inner workings, it's hitting a falling jump attack, and then hitting a second jump attack while rising for a sort of "double overhead." You can either do the double overhead, or you can go low, so the opponent has to guess 50/50 or brave counter. The most common fuzzy is falling j.H > rising j.M > j.3U seal dash. It looks like this:</p>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/raw-fuzzy.mp4"/>
 		</video>
-		<p>If you hit the j.H low enough the execution for the fuzzy is actually pretty easy. The troublesome part is that the timing is actually pretty strict. A lot of Grimnir's combo routing revolves around making this setup "autotimed" - i.e. if you hit the falling j.H on your opponent's wakeup you will have enough blockstun for rising j.M. Here is the easiest fuzzy setup in the game, and the one you should learn first:
-throw > j.H fuzzy</p>
+		<p>If you hit the j.H low enough the execution for the fuzzy is actually pretty easy. Unfortunately, the timing is very strict. A lot of Grimnir's combo routing revolves around making this setup "autotimed" - i.e. if you hit the falling j.H on your opponent's wakeup you will have enough blockstun for rising j.M. Here is the easiest fuzzy setup in the game, and the one you should learn first:</p>
+		<code>throw > j.H fuzzy</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/throw-fuzzy.mkv"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/throw-fuzzy.mp4"/>
 		</video>
 	</body>
 </html>
