--- a/super-combos.html
+++ b/super-combos.html
@@ -18,19 +18,19 @@
 		<h2>Tornado In Front (j.22U)</h2>
 		<code>autocombo > 236H > 5HHH (crouch) or 5MMM (standing) > raging strike > 5HH > 623H > 5H > 214H > super</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/super-grounded-tornado"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/super-grounded-tornado.mp4"/>
 		</video>
 		<p>Slightly stronger super combo if you're close enough to combo out of grounded tornado. Replace the last 5H with 5M if going into SSBA (which is slightly slower).</p>
 		<h2>Super Seal Setup</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22H > j.3U > 5H > super</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/super-combo-seals"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/super-combo-seals.mp4"/>
 		</video>
-		<p>If you know your super won't kill, you might opt to set up seals instead. You can fuzzy off this with short walk > j.6U > j.M fuzzy. The timing on making it a safejump is pretty tough, but the timing on hitting it in general is pretty lenient. Note that unlike the j.H fuzzy, the j.M fuzzy can be rolled out of. You *can* do the j.H fuzzy off the safejump (you can do it off any jump), but it's manually timed (much harder).</p>
+		<p>If you know your super won't kill, you might opt to set up seals instead. For SBA, you can fuzzy off this with short walk > j.6U > j.M fuzzy. The timing on making it a safejump is pretty tough, but the timing on hitting it in general is pretty lenient. Note that unlike the j.H fuzzy, the j.M fuzzy can be rolled out of. You *can* do the j.H fuzzy off the safejump (you can do it off any jump), but it's manually timed (much harder).</p>
 		<h2>Midscreen Cashout</h2>
 		<code>autocombo or 2M > 236H~8 > 214U > 2H > delay raging strike > 214U > 22U > 5M > raging strike > raging chain</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-big-dick-cashout"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-big-dick-cashout.mp4"/>
 		</video>
 		<p>Spends all meter and 2 BP for excellent damage anywhere on screen.</p>
 	</body>
