--- a/tornado-setups.html
+++ b/tornado-setups.html
@@ -12,7 +12,7 @@
 		<h2>Tornado In Front (j.214U)</h2>
 		<code>(starter) > 214H > 2M > 623H > j.22H > j.3U > 8U > j.M > j.1U > rejump j.214U (> 236H~8 whiff, stop as soon as possible to set up in front of opponent)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-infront"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-infront.mp4"/>
 		</video>
 		<p>Sets up a tornado in front of the opponent. Frame data is approximately even but there's a big tornado in front of the opponent so they can't really do much. Autospaces the tornado so that if you run up and throw as early as possible the opponent will get picked up by the tornado for a full combo. Can also run up button, run up and throw bait with the top seal, or just wait for the opponent to do something dumb. How good this setup is is fiercely matchup-dependent; in some matchups, any non-reversal button the opponent presses will get clipped by the tornado, effectively trapping them. But in some matchups, something like sweep can reach Grimnir and nearly nullify it entirely (notably, the mirror). Unlike fuzzy and camera setups, you have to bait the opponent's reversal option, but because you aren't hitting a button into your opponent's wakeup it's generally much stronger against parry characters.</p>
 		<h2>Tornado In Front (j.22U)</h2>
@@ -20,12 +20,12 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-infront-minus.mp4"/>
 		</video>
-		<p>Worse version of the above tornado setup that you can fall back on if your 22H is on cooldown. Leaves you significantly minus, but the tornado blocks many characters from punishing. If someone tries this on you in the mirror, you can punish them with sweep.</p>
+		<p>Worse version of the previous tornado setup that you can fall back on if your 22H is on cooldown. Leaves you significantly minus, but the tornado blocks many characters from punishing. If someone tries this on you in the mirror, you can punish them with sweep.</p>
 		<h2>Tornado Behind</h2>
 		<code>(starter) > 214H > 5LL > 623H > j.22H > j.6U > j.L > 214U (> 236H~8 whiff, set up behind the opponent)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-behind"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-behind.mp4"/>
 		</video>
-		<p>Largely powercrept by the tornado-infront setups, but can have value in some matchups where the above setups don't work as well (such as the mirror).</p>
+		<p>Sets up a tornado behind the opponent. Largely powercrept by the tornado-infront setups, but can have value in some matchups where the above setups don't work as well (such as the mirror).</p>
 	</body>
 </html>
