--- a/u-skill-starters.html
+++ b/u-skill-starters.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<a href="https://grimnir-combos.github.io/index.html">Grimnir Combos</a>
-		<h1>Super and Cashout Combos</h1>
+		<h1>U Skill Starters</h1>
 		<h2>214U starter (reaches corner)</h2>
 		<code>214U > 5M > 236H~6 > 66H > 5M > 214H > 5H > 623H > 22H or 22L</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
@@ -26,6 +26,6 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/236u.mp4"/>
 		</video>
-		<p>You can combo out of 236U (ult tornado) if you're far enough away, or almost anywhere if your opponent gets hit jumping. You have a lot of options, based mostly around how much meter you're willing to spend. The combo listed here is the one you want to do if you can kill. If you can't kill, you might opt to conserve meter by doing 236U > 214U > 2H > 623H, or if you're close enough to the corner you can go into fuzzy with 236U > 214U > 22U > 5H > 9U > j.M (> j.9U6U whiff > j.H fuzzy).</p>
+		<p>Zoner's nightmare. You can combo out of 236U (ult tornado) if you're far enough away, or almost anywhere if your opponent gets hit jumping. You have a lot of options, based mostly around how much meter you're willing to spend. The combo listed here is the one you want to do if you can kill. If you can't kill, you might opt to conserve meter by doing 236U > 214U > 2H > 623H, or if you're close enough to the corner you can go into fuzzy with 236U > 214U > 22U > 5H > 9U > j.M (> j.9U6U whiff > j.H fuzzy).</p>
 	</body>
 </html>
