--- a/corner-fuzzy.html
+++ b/corner-fuzzy.html
@@ -20,7 +20,8 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-fuzzy-easy.mp4"/>
 		</video>
-		<p>The first fuzzy combo you should learn: Grimnir's basic corner combo, but ending in 22U. It's a good setup with no major flaws. Some minor flaws: it uses one seal to time the j.H. You'll see this in a lot of setups, because airdash > j.H has a much more lenient timing than jump > j.H. Also if you want to bait bravecounter and dodge, you're -1. And of course it requires 50 meter (but with the refund only costs 25). That said it's pretty rare not to have the meter at the end of this combo, it's very easy, very consistent, and ends you with 2 ground seals.</p>
+		<p>The first fuzzy combo you should learn: Grimnir's basic corner combo, but ending in 22U. It's a good setup with no major flaws. Some minor flaws: it uses one seal to time the j.H. You'll see this in a lot of setups, because airdash > j.H has a much more lenient timing than jump > j.H. Also if you want to bait brave counter and dodge, you're -1. And of course it requires 50 meter (but with the refund only costs 25). That said it's pretty rare not to have the meter at the end of this combo, it's very easy, very consistent, and ends you with 2 ground seals.</p>
+		<p>Sidenote, all fuzzy combos (including this one) safejump unless stated otherwise.</p>
 		<h2>Improved Metered Fuzzy</h2>
 		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > land > rejump j.22U (> land > 5L whiff > jump > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
@@ -32,35 +33,34 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-fuzzy.mp4"/>
 		</video>
-		<p>Pretty similar to the previous combo. Its big advantage is that it doesn't cost you 25 meter. Its big disadvantage is that it puts your seals on cooldown for 12 seconds, so when your opponent brave counters you, you now have to play with no seals. It also does a little less damage (naturally, because you aren't spending meter). And like the first combo, you're -1 if you bait the bravecounter with dodge. That said this is a good combo if you want to conserve your meter. Just don't be too stingy - meter gain in this game is super fast.</p>
+		<p>Pretty similar to the previous combo. Its big advantage is that it doesn't cost you 25 meter. Its big disadvantage is that it puts your seals on cooldown for 12 seconds, so when your opponent brave counters you, you now have to play with no seals. It also does a little less damage (naturally, because you aren't spending meter). And like the first setup, you're -1 if you bait the brave counter with dodge. That said this is a good combo if you want to conserve your meter. Just don't be too stingy - meter gain in this game is super fast.</p>
 		<h1>Bonus Fuzzy Setups</h1>
-		<p>These setups are either more difficult or less useful than the above setups but still have their uses, especially if your execution is good.</p>
+		<p>These setups are either more difficult or less useful than the above setups. They still have their uses, especially if your execution is good, but you should learn them after.</p>
 		<h2>Old Meterless Fuzzy</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22H > j.6U > j.M > 2.H (> 5U > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-hard.mp4"/>
 		</video>
-		<p>Combo notes: This was the popular fuzzy route on the release version of the game. Leaves you with only one ground seal, and on current patch the j.H is manually timed (you must press about as late as possible), but it does more damage than the other meterless setup, has a little more room for ambiguity/shenanigans, and leaves you plus on Brave Counter dodge.</p>
+		<p>Combo notes: This was the popular fuzzy route on the release version of the game. Leaves you with only one ground seal, and on current patch the j.H is manually timed (you must press about as late as possible), but it does more damage than the other meterless setup, has a little more room for ambiguity/shenanigans, and leaves you plus on brave counter dodge.</p>
 		<h2>66H Fuzzy</h2>
 		<code>(starter) > 214H > 5L > 623H > 5H > 236H~8 > 66H > 22U</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/66h-fuzzy.mp4"/>
 		</video>
-		<p>Similar to the first couple of fuzzy setups listed. You can end it either with the 5L whiff or with the 5U > j.6U whiff ender, but the timing for the former is much more strict. Does more damage and looks way cooler, but leaves you with a worse tornado cooldown.</p>
+		<p>Similar to the first couple of fuzzy setups listed. You can end it either with the 5L whiff or the 5U > j.6U whiff ender, but the timing for the former is much more strict. Does more damage and looks way cooler, but leaves you with a worse tornado cooldown.</p>
 		<h2>Cooler 66H Fuzzy</h2>
 		<code>autocombo > 623H > j.H > rejump j.H > j.214H > 5H > 236H~8 > 66H > 22U</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/66h-fuzzy-alt.mp4"/>
 		</video>
-		<p>You need to be close to the opponent. Pretty much the same as the previous combo, but even cooler, and with more damage.</p>
+		<p>Bonus swag points for comboing into airball. Also tacks on a bit more damage. But if you're too far the combo will drop.</p>
 		<h2>Grounded Tornado Fuzzy</h2>
 		<code>autocombo > 236H > 5HHH (crouch) or 5MMM (standing) > 623H > j.H > 2H > 5U > j.M > j.214H > 22U</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/corner-grounded-tornado.mp4"/>
 		</video>
 		<p>You need to be close to the opponent. Does even more damage than either of the previous combos. If you have seals set up somewhere other than the corner the 5U will ruin the combo, so sub out the ender for whatever you feel confident in making up on the spot.</p>
-		<p>Pretty much the same as the previous combo, but even cooler, and with more damage.</p>
-		<h2>Grounded Tornado Fuzzy</h2>
+		<h2>Alternate Metered Fuzzy</h2>
 		<code>(starter) > 214H > 5L > 5H > 236H~8 > 623H > j.22U (> 2L whiff > superjump > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-fuzzy-hard.mp4"/>
