--- a/midscreen.html
+++ b/midscreen.html
@@ -14,7 +14,7 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-meterless.mp4"/>
 		</video>
-		<p>Grimnir's meterless midscreen conversions are pretty average. Off distant hits (including most whiff punishes) you can't even connect 214L. If your starter is autocombo, you can end on 214M instead for greater corner carry.</p>
+		<p>Grimnir's meterless midscreen conversions are pretty average. Off very distant hits (including most whiff punishes) you can't even connect 214L. If your starter is autocombo, you can end on 214M instead for greater corner carry.</p>
 		<h2>Simple Midscreen</h2>
 		<code>autocombo or 2M > 236H~8 > 214U > 2H > 623M > 2M > 214H (> 22L or 22H or 22U)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
@@ -32,9 +32,9 @@
 		<h2>Midscreen Fuzzy (92U6U)</h2>
 		<code>autocombo or 2M > 236H~8 > 214U > (delay)22U > 5H > 623L > 9U > (delay)j.2U (> land > j.6U whiff > j.M fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fuzzy-f.l.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fuzzy-926u.mp4"/>
 		</video>
-		<p>The easiest midscreen fuzzy setup, but with downsides. First, the major downside: it is either a fuzzy or a safejump, but never both at the same time. Hit the j.2U on the top seal early for fuzzy, late for safejump. It also leaves the least room to do tricky non-fuzzy things to your opponent.</p>
+		<p>The easiest midscreen fuzzy setup, but with downsides: it is either a fuzzy or a safejump, but never both at the same time. Hit the j.2U on the top seal early for fuzzy, late for safejump. Also, the rigidity of it leaves the least room to do tricky non-fuzzy things to your opponent.</p>
 		<h2>Midscreen Fuzzy (f.L)</h2>
 		<code>autocombo or 2M > 236H~8 > 214U > 22U > f.L > 623L > 9U whiff > j.H fuzzy</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
@@ -46,16 +46,16 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fuzzy-76u.mp4"/>
 		</video>
-		<p>The rare 7 input. Fairly difficult setup due to the awkward j.M link. Does a fair bit more damage than the previous combo and gives more corner carry, and if you don't drop you're guaranteed to have the height. Can replace the difficult delay j.M link with a difficult j.H link instead, which may or may not be easier, player preference.</p>
+		<p>The rare 7 input. Fairly difficult setup due to the awkward j.M link. Does a fair bit more damage than the previous combo and gives more corner carry, and if you don't drop you're guaranteed to have the height for autotime fuzzy. Can replace the difficult delay j.M with a difficult instant j.H link instead, which may or may not be easier, player preference.</p>
 		<h2>Midscreen Fuzzy (22[L])</h2>
 		<code>autocombo or 2M > 236H~8 > 214U > (delay)22U > c.H > 623L > 9U > j.M (> 22[L] > j.6U whiff > j.M fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fuzzy-22[L].mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fuzzy-22%5BL%5D.mp4"/>
 		</video>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fuzzy-22[L]-crossup.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fuzzy-22%5BL%5D-crossup.mp4"/>
 		</video>
-		<p>Slightly difficult setup. Can crossup depending on your timings, which is funny but often results in you getting bravecountered straight into the corner. Weirdly if you crossup you seem to always get a standing hit on the opponent even if they crouch and get hit overhead by the first j.M. To avoid crossing up delay the 22[L] cancel slightly. Crossup is a safejump, sameside is not. Ability to mix up movement with other seal placements leaves a lot of room for devious trickery, e.g. press 22L > j.3U instead for a quick low.</p>
+		<p>Slightly difficult setup. Can crossup depending on your timings, which is funny but often results in you getting bravecountered straight into the corner. Weirdly if you crossup you seem to always get a standing hit on the opponent even if they crouch and get hit overhead by the first j.M. To avoid crossing up delay the 22[L] cancel slightly. Crossup is a safejump, sameside is not. Ability to mix up movement with other seal placements leaves a lot of room for devious trickery, e.g. press j.22L > j.3U instead for a quick low.</p>
 		<h2>Midscreen Fuzzy (929U)</h2>
 		<code>autocombo or 2M > 236H~8 > 214U > (delay)22U > c.H > 623L > 9U > 2U (> 9U whiff > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
