Add sealless fuzzy and 623L combos which I recorded but forgot to add

--- a/corner-fuzzy.html
+++ b/corner-fuzzy.html
@@ -34,6 +34,14 @@
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-fuzzy.mp4"/>
 		</video>
 		<p>Pretty similar to the previous combo. Its big advantage is that it doesn't cost you 25 meter. Its big disadvantage is that it puts your seals on cooldown for 12 seconds, so when your opponent brave counters you, you now have to play with no seals. It also does a little less damage (naturally, because you aren't spending meter). And like the first setup, you're -1 if you bait the brave counter with dodge. That said this is a good combo if you want to conserve your meter. Just don't be too stingy - meter gain in this game is super fast.</p>
+		<h2>Sealless Fuzzy</h2>
+		<code>(fuzzy) > j.22U > j.3U > 5H > 214H > 5H > 623H > 22U > 5H > raging strike > raging chain</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/sealless-fuzzy.mp4"/>
+		</video>
+		<p>You can fuzzy tall characters in the corner even if you don't have any seals up because they're big enough for the j.22U hitbox to launch them. Low damage, but high surprise factor. If you do rising j.L for the fuzzy hit instead of rising j.M it works on a few bonus semi-tall characters. Combo listed spends all your resources for high damage (and leads into a fuzzy setup if they live), but you can end it however you're feeling that day if you want to conserve.</p>
+		<p>Tall characters (can rising j.M > j.22U): Grimnir, Katalina, Percival, Metera, Vaseraga, Soriz, Eustace, Beelzebub, Belial, A.Belial, Versusia, Ladiva, Lowain, Lucilius</p>
+		<p>Semi-tall characters (can rising j.L > j.22U): Zooey, Yuel, Siegfried, 2B</p>
 		<h1>Bonus Fuzzy Setups</h1>
 		<p>These setups are either more difficult or less useful than the above setups. They still have their uses, especially if your execution is good, but you should learn them after.</p>
 		<h2>Old Meterless Fuzzy</h2>
@@ -41,7 +49,7 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-hard.mp4"/>
 		</video>
-		<p>Combo notes: This was the popular fuzzy route on the release version of the game. Leaves you with only one ground seal, and on current patch the j.H is manually timed (you must press about as late as possible), but it does more damage than the other meterless setup, has a little more room for ambiguity/shenanigans, and leaves you plus on brave counter dodge.</p>
+		<p>This was the popular fuzzy route on the release version of the game. Leaves you with only one ground seal, and on current patch the j.H is manually timed (you must press about as late as possible), but it does more damage than the other meterless setup, has a little more room for ambiguity/shenanigans, and leaves you plus on brave counter dodge.</p>
 		<h2>66H Fuzzy</h2>
 		<code>(starter) > 214H > 5L > 623H > 5H > 236H~8 > 66H > 22U</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
