--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/throw-fuzzy.mp4"/>
 		</video>
+		<p>The following characters are too short for Grimnir to fuzzy: Charlotta, Narmaya, Cagliostro, Anre, Anila</p>
 	</body>
 </html>
