--- a/midscreen.html
+++ b/midscreen.html
@@ -62,5 +62,18 @@
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fuzzy-929u.mp4"/>
 		</video>
 		<p>Easy combo for a difficult setup - the timing on the fuzzy j.H is quite strict. Do both of the first two dashes with one U press for help lining it up. Delay the last 9U dash very slightly for fuzzy, or press it early for an empty jump low.</p>
+		<h1>Midscreen 623L</h1>
+		<h2>623L (reaches corner)</h2>
+		<code>(starter) > 623L > 6U > 2M > 236H > 214H > 623H > 22U (> 5U > j.6U whiff > j.H fuzzy)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/623L-reach-corner.mp4"/>
+		</video>
+		<p>When you hit your starter but don't quite reach your seal for a gale dash extension, you can use the forward movement from light spin to convert into a full combo. If you think you'll reach the corner with 214H, this sets up for an easy fuzzy.</p>
+		<h2>623L (no corner)</h2>
+		<code>(starter) > 623L > 6U > 2M > 236H > 214U > 2H > 623H > 22H or 22L</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/623L-wont-reach-corner.mp4"/>
+		</video>
+		<p>If you don't think you'll reach the corner with 214H, you can do this instead to push your opponent Quite Close to the corner and set up seals.</p>
 	</body>
 </html>
