Remove incorrect advice about j.H in the j.7U6U midscreen fuzzy setup

--- a/midscreen.html
+++ b/midscreen.html
@@ -46,7 +46,7 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fuzzy-76u.mp4"/>
 		</video>
-		<p>The rare 7 input. Fairly difficult setup due to the awkward j.M link. Does a fair bit more damage than the previous combo and gives more corner carry, and if you don't drop you're guaranteed to have the height for autotime fuzzy. Can replace the difficult delay j.M with a difficult instant j.H link instead, which may or may not be easier, player preference.</p>
+		<p>The rare 7 input. Fairly difficult setup due to the awkward j.M link. Does a fair bit more damage than the previous combo and gives more corner carry, and if you don't drop you're guaranteed to have the height for autotime fuzzy.</p>
 		<h2>Midscreen Fuzzy (22[L])</h2>
 		<code>autocombo or 2M > 236H~8 > 214U > (delay)22U > c.H > 623L > 9U > j.M (> 22[L] > j.6U whiff > j.M fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
