--- a/super-combos.html
+++ b/super-combos.html
@@ -15,7 +15,7 @@
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/super-combo.mp4"/>
 		</video>
 		<p>This is the combo you do when you want to kill (or get really close). You might also go for it when you already have seals set up. If you have technical inputs turned on, make sure to technical input the super for your extra 10%. If you're too far after the raging strike, you'll get far H instead of close H. This still works, but you need to make sure to wait for both hits of f.H or you'll drop. If you're having trouble keeping the height for super, you can replace the 5H before tornado with 2M to make the combo much easier.</p>
-		<h2>Tornado In Front (j.22U)</h2>
+		<h2>Super Combo (grounded tornado)</h2>
 		<code>autocombo > 236H > 5HHH (crouch) or 5MMM (standing) > raging strike > 5HH > 623H > 5H > 214H > super</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/super-grounded-tornado.mp4"/>
