Add page for antiairs

--- a/corner-fuzzy.html
+++ b/corner-fuzzy.html
@@ -68,6 +68,12 @@
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/corner-grounded-tornado.mp4"/>
 		</video>
 		<p>You need to be close to the opponent. Does even more damage than either of the previous combos. If you have seals set up somewhere other than the corner the 5U will ruin the combo, so sub out the ender for whatever you feel confident in making up on the spot.</p>
+		<h2>Alternate Meterless Fuzzy</h2>
+		<code>(starter) > 623M > j.1U > 5H > 236H~8 > 66H > 623H (> j.22H > j.6U whiff > j.H fuzzy)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-fuzzy-alt.mp4"/>
+		</video>
+		<p>Requires an air seal already set and you need to be close to the opponent. Does a bit more damage than the other meterless fuzzy and looks much cooler.</p>
 		<h2>Alternate Metered Fuzzy</h2>
 		<code>(starter) > 214H > 5L > 5H > 236H~8 > 623H > j.22U (> 2L whiff > superjump > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
