--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<a href="https://grimnir-combos.github.io/camera-5050.html">Camera 50/50</a><br/>
 		<a href="https://grimnir-combos.github.io/tornado-setups.html">Tornado Setups</a><br/>
 		<a href="https://grimnir-combos.github.io/midscreen.html">Midscreen Setups</a><br/>
+		<a href="https://grimnir-combos.github.io/antiairs.html">Antiairs</a><br/>
 		<a href="https://grimnir-combos.github.io/u-skill-starters.html">U Skill Starters</a><br/>
 		<a href="https://grimnir-combos.github.io/super-combos.html">Super and Cashout Combos</a><br/>
 		<p>Grimnir tech resource. Links to combos/setups above. Below is an overview of the game's combo system and a brief introduction to Grimnir's fuzzy setups.</p>
