Add new camera setup, new tornado behind setup, and meterless 623L midscreen

--- a/camera-5050.html
+++ b/camera-5050.html
@@ -41,5 +41,11 @@
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-midscreen.mp4"/>
 		</video>
 		<p>Here's how you turn a midscreen hit into a camera 50/50.</p>
+		<h2>Extra Seal Camera Setup</h2>
+		<code>(starter) > 623H > 2M > 236H~8 > superjump j.M > j.236H > j.22U > j.9U</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-bonus-seal.mp4"/>
+		</video>
+		<p>More difficult camera setup that leaves an additional ground seal for higher reward on hit or additional pressure on block. Can also end in 3U6U > j.M for to fuzzy.</p>
 	</body>
 </html>
